data/all_generated_tests/raw_wast_tests/block_UnreachableCodeExecution_2036.wast
;; 7. **Sequential Block With Unreachable Disruption**:    - Initiate two blocks in sequence where the first ends in `unreachable` and the second begins validly.    - Handles block labeling and seamless transitions between blocks.    - Mismanagement of end detection executes the second attempted block despite `unreachable`.

(assert_invalid
  (module
    (func $sequential-block-unreachable
      (block (result i32)
        (unreachable)
      )
      (block (result i32)
        (i32.const 42)
      )
    )
  )
  "type mismatch"
)